--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buckets-js": "^1.98.2",
     "draft-js": "^0.11.4",
     "materialize-css": "^1.0.0-rc.2",
+    "nouislider": "^14.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-resizable": "^1.10.1",
